--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/server.js",
+    "debug": "ndb src/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,10 +22,13 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.7"
+    "mongoose": "^6.6.7",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
