init pg and sequlize

--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,5 +1,10 @@
 NODE_ENV=development
 PORT=8080
-MONGODB_URI=mongodb://127.0.0.1:27017/db-name-here
 APP_SECRET=secret here
 LOGIN_EXPIRE=1 #1 day
+
+BUILD_API_DB_HOST=localhost
+BUILD_API_DB_USER=postgres
+BUILD_API_DB_PASSWORD=123456
+BUILD_API_DB_NAME=build_api
+BUILD_API_DB_DIALECT=postgres
