--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon src/server.js",
-    "debug": "ndb src/server.js"
+    "debug": "ndb src/server.js",
+    "build_api:model:generate": "npx sequelize-cli model:generate",
+    "build_api:migrate": "npx sequelize-cli db:migrate",
+    "build_api:migrate:undo": "npx sequelize-cli db:migrate:undo"
   },
   "repository": {
     "type": "git",
@@ -28,10 +31,13 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.7",
+    "pg": "^8.11.0",
+    "sequelize": "^6.31.1",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.6.0"
   }
 }
