--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "debug": "ndb src/server.js",
     "build_api:model:generate": "npx sequelize-cli model:generate",
     "build_api:migrate": "npx sequelize-cli db:migrate",
-    "build_api:migrate:undo": "npx sequelize-cli db:migrate:undo"
+    "build_api:migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "build_api:seed:generate": "npx sequelize-cli seed:generate",
+    "build_api:seed:all": "npx sequelize-cli db:seed:all"
   },
   "repository": {
     "type": "git",
@@ -23,14 +25,13 @@
   "homepage": "https://github.com/nmsoikat/Start-Building-Nodejs-API#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-mongo-sanitize": "^2.2.0",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.7",
     "pg": "^8.11.0",
     "sequelize": "^6.31.1",
     "xss-clean": "^0.1.1"
